[package]
name = "demo-dumper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
bitbuffer = { version = "0.11.2"}
clap = { version = "4.5.45", features = ["derive"] }
crc = "1"
glob = "0.3.3"
hound = "3.5.1"
opus = "0.3.0"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.143"
tf-demo-parser = "0.6.4"

[profile.release]
codegen-units = 1
lto = true
